# libreoffice-mcp

./: README.md  pyproject.toml  requirements.txt
src/: form_letters.py  server.py
src/libreoffice_mcp/: __init__.py  __main__.py  convert_pdf.py  form_letters.py  server.py  util.py
tests/: test_docx_to_pdf.py  test_form_letters.py  test_mcp_server.py  test_server_tools.py
